# residual_pomdp

./: .gitignore  .gitmodules  .pylintrc  README.md  pyproject.toml  run_ci_checks.sh
.github/workflows/: ci.yml
experiments/: slam2d_move_look.py  train_cover2d.py
src/residual_controllers/: executor.py  online_trainer.py  planner.py  residual_policy.py  utils.py
src/residual_controllers/envs/: cover2d.py  cover2d_residual.py
tests/: test_residual_policy.py
tests/envs/: test_cover2d_visualization.py
